<resources>
    <string name="app_name">ToDo: MGD</string>
    <string name="default_task_title">TaskTitle</string>
    <string name="save_button_text">Save</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="remind_me_date_hint_text">Remind Me Date</string>
    <string name="remind_me_checkbox_text">Remind Me</string>
    <string name="due_date_text_hint">Due Date</string>
    <string name="task_description_text_hint">Task Description</string>
    <string name="task_title_text_hint">Task Title</string>
    <string name="default_description">Description of the task.</string>
    <string name="default_tag">School</string>
    <string name="default_due_date">1/1/2000</string>
    <string name="default_remind_me_date">1/1/2000</string>
</resources>